--- a/SPI-consumer/pom.xml
+++ b/SPI-consumer/pom.xml
@@ -9,18 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>A</artifactId>
+    <artifactId>SPI-custumer</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>4.0.1</version>
+            <groupId>org.example</groupId>
+            <artifactId>SPI-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>4.0.1</version>
+            <groupId>org.allen</groupId>
+            <artifactId>SPI-provider</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
