--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,18 @@
     <artifactId>PersonalPratice</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>6</source>
+                    <target>6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <modules>
         <module>ThreadLocal</module>
         <module>ParentalDelegation</module>
@@ -17,6 +29,13 @@
         <module>A</module>
         <module>B</module>
         <module>ClassLoaderTest</module>
+        <module>Phaser</module>
+        <module>SPI-provider</module>
+        <module>SPI-provider</module>
+        <module>SPI-common</module>
+        <module>SPI-consumer</module>
+        <module>DynamicProxy</module>
+        <module>XlsxReader</module>
     </modules>
 
 
